feat: add documentation for delete and create Opening
