# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"go.mod/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -21,4 +22,19 @@ func sendSucess(ctx *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("operation from handler: %s sucessfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message string `json: "message"`
+	Error   string `json: "error: "errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json: "message"`
+	Data    schemas.OpeningResponse
+}
+
+type DeleteOpeningResponse struct {
+	Message string `json: "message"`
+	Data    schemas.OpeningResponse
 }
